--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-<script type="importmap">
+{# <script type="importmap">
 {
   "imports": {
     "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
     "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
     "mindar-image-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
   }
-}
+} #}
 </script>
 <a-scene mindar-image="imageTargetSrc: ./assets/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       {# <a-assets timeout="10000">
@@ -34,10 +34,10 @@
 </body>
 </html>
 
-<script type="module">
+{# <script type="module">
   import * as THREE from 'three';
   import { MindARThree } from 'mindar-image-three';
-</script>
+</script> #}
 
 
 
