--- a/index.html
+++ b/index.html
@@ -3,49 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARJS Test</title>
+    <title>Reset</title>
 </head>
 <body>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-<script type="importmap">
-{
-  "imports": {
-    "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-    "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-    "mindar-image-three":"https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-three.prod.js"
-  }
-}
-</script>
-<a-scene mindar-image="imageTargetSrc: ./assets/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-      {# <a-assets timeout="10000">
-        <img id="card" src="./assets/targets.png" />
-        <a-asset-item id="avatarModel" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/softmind/scene.gltf"></a-asset-item>
-      </a-assets> #}
-
-       <a-assets timeout="10000">
-           <a-asset-item id="fox" src="./assets/fox/scene.gltf"></a-asset-item>
-       </a-assets>
-
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0">
-        {# <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-         #}
-         {# <a-entity geometry="primitive: box; width: 0.5; height: 0.5; depth: 0.5" material="color: blue"></a-entity> #}
-       
-       
-       <a-entity gltf-model="#fox"></a-entity>
-        {# <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"> #}
-      </a-entity>
-    </a-scene>
+    <div id="app">
+      hello merle why are you late?
+    </div>
 </body>
 </html>
-
-<script type="module">
-  import * as THREE from 'three';
-  import { MindARThree } from 'mindar-image-three';
-</script>
-
-
-
-
