--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   </head>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./assets/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-assets timeout="10000">
+        <a-asset-item id="fox" src="./assets/fox/scene.gltf"></a-asset-item>
+      </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-      <a-entity mindar-image-target="targetIndex: 0">
+      {# <a-entity mindar-image-target="targetIndex: 0">
         <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-      </a-entity>
+      </a-entity> #}
+
+      <a-entity mindar-image-target="targetIndex: 0" gltf-model="#fox"></a-entity>
+
     </a-scene>
   </body>
 </html>
