--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <a-plane color="blue" opaciy="0.5" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
       </a-entity> #}
 
-      <a-entity mindar-image-target="targetIndex: 0" gltf-model="#fox"></a-entity>
-
+      {# <a-entity mindar-image-target="targetIndex: 0" gltf-model="#fox"></a-entity> #}
+      <a-entity mindar-image-target="targetIndex: 0">
+        {# <a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane> #}
+        <a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.1 0.1 0.1" src="#fox">
+      </a-entity>
     </a-scene>
   </body>
 </html>
