--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Reset</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <style type="text/css">
+      .a-enter-vr {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./assets/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+      <a-scene mindar-image="imageTargetSrc: ./assets/targets.mind; uiError:no; uiLoading:no; uiScanning:no" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets timeout="10000">
-        <a-asset-item id="fox" src="./assets/fox/scene.gltf"></a-asset-item>
+        <a-asset-item id="fox" src="./assets/fox_minecraft/scene.gltf"></a-asset-item>
       </a-assets>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       {# <a-entity mindar-image-target="targetIndex: 0">
@@ -25,3 +30,4 @@
     </a-scene>
   </body>
 </html>
+
